--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -1,6 +1,6 @@
     <style>
       #main-content {
-        margin-top: 50px;
+        padding-top: 0px;
         background-color: #fff;
         padding-bottom: 30px;
       }
@@ -18,7 +18,6 @@
           top: 120px;
         }
       }
-
 
       @media (min-width: 992px) {
         #road-sign1 {
