修改了front的背景图片

--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -15,6 +15,9 @@ html, body {
   background-color: #000;
 }
 .navbar.car-front-common-navbar {
+  background: asset-url('bg-site-front.gif') repeat;
+  overflow-x: hidden;
+
   background-color: #fff;
   border-bottom: 3px solid #3C8DBC;
   .nav.navbar-nav > li > a {
@@ -84,6 +87,8 @@ a.list-group-item:hover > * {
 // 主要内容部分，因为顶部菜单固定，所以要设置margin-top
 // =========================================
 #main-content {
+  background: asset-url('bg-site-front.gif') repeat;
+  overflow-x: hidden;
   margin-top: 50px;
   padding-top: 40px;
   background-color: #eee;
