--- a/app/views/front/welcome/index.html.erb
+++ b/app/views/front/welcome/index.html.erb
@@ -5,6 +5,10 @@
         padding-bottom: 30px;
       }
 
+      #main-content > .container {
+        background: initial;
+      }
+
       @media (min-width: 400px) {
         #road-sign1 {
           position: absolute;
