去掉了登录和注册中间的竖线，调整了post hover时的背景色

--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -57,8 +57,9 @@ a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration:none;
   color: #fff;
-  background: #D14836;
+  background: #09B3CD;
   padding-left: 20px;
+  font-weight: bold;
 }
 
 a.list-group-item:hover > * {
