--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -53,10 +53,11 @@
                   </ul>
               </div>
             <% else %>
-              <a id="btn_sign_in" class="btn btn-danger btn-sm"><%= t('view.action.sign_in')%></a>
-              <a style="margin: 0px 8px; color: #000;">|</a>
+              <a id="btn_sign_in" class="btn btn-danger btn-sm" style="margin-right: 10px;">
+                <%= t('view.action.sign_in')%>
+              </a>
               <%= link_to t('view.action.sign_up'), new_user_registration_path,
-              class: "btn btn-success btn-sm"%>
+                class: "btn btn-success btn-sm"%>
             <% end %>
           </div>
         </div><!--/.nav-collapse -->
