快捷查询除了流水号，还有电话号以及车牌号对应

--- a/app/views/back/mystation/orders/show_order_no.html.erb
+++ b/app/views/back/mystation/orders/show_order_no.html.erb
@@ -1,1 +1,1 @@
-没有找到预约流水号: <span class="important-info"><%= params[:order_no]%></span> 的记录！
+没有找到预约流水号，手机号，车牌号符合: <span class="important-info"><%= params[:order_no]%></span> 的记录！
