添加了前台用户修改密码和个人信息的功能

--- a/app/views/back/personal/password.html.erb
+++ b/app/views/back/personal/password.html.erb
@@ -9,7 +9,7 @@
       </div>
       <%= f.input :current_password, required: true %>
       <%= f.input :password, required: true %>
-      <%= f.input :password_confirmation, required: true %>
+      <%= f.input :password_confirmation%>
     </div>
     <div class="car-form-actions bg-gray">
       <div class='col-sm-offset-2 col-sm-10 button-wrapper'>
