--- a/app/views/layouts/front_user/_header.html.erb
+++ b/app/views/layouts/front_user/_header.html.erb
@@ -28,10 +28,10 @@
           <!-- Menu Footer-->
           <li class="user-footer">
             <div class="pull-left">
-              <%= link_to t('view.action.personal.show'), back_personal_show_path, class: "btn btn-default btn-flat" %>
+              <%= link_to t('view.action.personal.show'), front_user_personal_show_path, class: "btn btn-default btn-flat" %>
             </div>
             <div class="pull-right">
-              <%= link_to t('view.action.personal.password'), back_personal_password_path, class: "btn btn-default btn-flat" %>
+              <%= link_to t('view.action.personal.password'), front_user_personal_password_path, class: "btn btn-default btn-flat" %>
             </div>
           </li>
           </ul>
