--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -46,8 +46,11 @@
                   </button>
                   <ul class="dropdown-menu" role="menu">
                       <li><%= link_to "我的控制台", front_user_root_path %></li>
-                      <li><a href="#">个人信息</a></li>
-                      <li><%= link_to "修改密码", edit_user_registration_path %></li>
+                      <li><a href="<%= front_user_personal_show_path %>">个人信息</a></li>
+                      <li>
+                        <%# link_to "修改密码", edit_user_registration_path %>
+                        <%= link_to "修改密码", front_user_personal_password_path %>
+                      </li>
                       <li class="divider"></li>
                       <li><%= link_to t('view.action.sign_out'), destroy_user_session_path, {method: :delete} %></li>
                   </ul>
