修改了缩小屏幕后，登录按钮显示到忘记密码后面的问题，改为到前面

--- a/app/views/front/common/_sign_in_form_email.html.erb
+++ b/app/views/front/common/_sign_in_form_email.html.erb
@@ -43,7 +43,7 @@
   </div>
 </div>
 <div class="footer">
-  <%= f.submit t('view.action.sign_in'), class: 'btn btn-lg btn-success col-sm-2' %>
+  <%= f.submit t('view.action.sign_in'), class: 'btn btn-lg btn-success col-sm-2', style: "float: left;" %>
   <div style="float:left; margin: 20px 0 0 30px;">
     <%= link_to t('view.confirm.forget_password'), new_user_password_path %><br />
   </div>
