修改了devise登录用的模版，添加了logo，修改了背景图

--- a/app/assets/stylesheets/common/base.css.scss
+++ b/app/assets/stylesheets/common/base.css.scss
@@ -2,7 +2,7 @@
 // 系统通用样式
 // -----------------------------------------
 html, body {
-  background: #eee;
+  background: #e4e4e4;
 }
 
 .important-info {
