--- a/app/views/layouts/devise_user.html.erb
+++ b/app/views/layouts/devise_user.html.erb
@@ -18,15 +18,20 @@
   <body>
     <div class="header">
       <div class="container marketing devise-header">
-        <span class="devise-site-logo">
-          <a class="navbar-brand" href="/" style="color:black; font-size: 22px;"><%= t("view.site.front_title") %></a>
-        </span>
-        <span class='logo devise-title'><%= yield :head_title %></span>
+        <div class="devise-site-logo">
+          <a class="navbar-brand" href="/" style="color:black; font-size: 22px;">
+            <%= image_tag "site_logo.jpg"%>
+            <%= t("view.site.front_title") %>
+          </a>
+          <span class='logo devise-title'><%= yield :head_title %></span>
+        </div>
       </div>
     </div>
-    <div class="container marketing">
-      <%= yield %>
-    </div>
+    <div class="devise-body-content">
+      <div class="container marketing">
+        <%= yield %>
+      </div>
+    <div>
     <%= render "layouts/front/footer" %>
   </body>
 </html>
