--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -2,24 +2,26 @@
 <html lang="zh-cn">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+    <meta http-equiv="X-UA-Compatible" content="IE=8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <title><%= t('view.site.front_title') %></title>
 
-    <%= stylesheet_link_tag    'front', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'front', media: 'all', 'data-turbolinks-track' => true %>
     <%= yield :head_stylesheet %>
     <%= javascript_include_tag 'front', 'data-turbolinks-track' => true %>
     <%= yield :head_javascript %>
 
     <%= csrf_meta_tags %>
 
+    <script src="<%= asset_url('css3-mediaqueries.js')%>"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
+      <script src="<%= asset_url('html5shiv.js')%>"></script>
+      <script src="<%= asset_url('respond.js')%>"></script>
     <![endif]-->
 
   </head>
@@ -35,4 +37,32 @@
 
   </body>
 </html>
+
+
+
+
+
+<!--
+
+    <![if !IE]>
+      <%= stylesheet_link_tag 'front', media: 'all', 'data-turbolinks-track' => true %>
+      <%= yield :head_stylesheet %>
+      <%= javascript_include_tag 'front', 'data-turbolinks-track' => true %>
+      <%= yield :head_javascript %>
+    <!<![endif>
+
+      <%= stylesheet_link_tag 'front_ie', media: 'all'%>
+    <!--[if lte IE 7]>
+      <%= stylesheet_link_tag 'front_ie', media: 'all'%>
+      <%= javascript_include_tag 'front', 'data-turbolinks-track' => true %>
+      <script type="text/javascript" src="<%= asset_url('bsie/bootstrap-ie.js')%>"></script>
+    <![endif]-->
+
+    <!--[if gt IE 7]>
+      <%= stylesheet_link_tag 'front', media: 'all', 'data-turbolinks-track' => true %>
+      <%= yield :head_stylesheet %>
+      <%= javascript_include_tag 'front', 'data-turbolinks-track' => true %>
+      <%= yield :head_javascript %>
+    <![endif]-->
+-->
 
