修改了张磊提出的IE中点击选择时间段tab的bug

--- a/app/views/front/orders/steps/_form_step_select_date.html.erb
+++ b/app/views/front/orders/steps/_form_step_select_date.html.erb
@@ -27,7 +27,7 @@
       <span class="label label-success" style="font-size: 100%;">已选择时间段：<%= l(@order.order_time, format: :line) %></span>
       <% end %>
     </div>
-    <li class="active"><a href="">选择时间段</a></li>
+    <li class="active"><a>选择时间段</a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" style="overflow-x: scroll;">
