--- a/app/views/layouts/front/_navbar.html.erb
+++ b/app/views/layouts/front/_navbar.html.erb
@@ -1,5 +1,5 @@
     <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top car-front-common-navbar" role="navigation">
+    <div id="navbar-top" class="navbar navbar-default navbar-fixed-top car-front-common-navbar" role="navigation">
       <div class="container wrapped-content">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -8,12 +8,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div style="float: left;">
-          <%# link_to t('view.site.front_title'), root_path, {class: 'navbar-brand navbar-logo'} do %>
-          <%= link_to root_path, {class: 'navbar-brand navbar-logo'} do %>
-          <%= image_tag "site_logo.jpg"%>
-          <%= t('view.site.front_title') %>
-          <% end %>
+          <div>
+            <%= link_to root_path, {class: 'navbar-brand navbar-logo'} do %>
+              <%= image_tag "site_logo.jpg"%>
+              <%= t('view.site.front_title') %>
+            <% end %>
           </div>
         </div>
         <div class="navbar-collapse collapse">
@@ -30,7 +29,7 @@
               <%= link_to Station.model_name.human, front_stations_path %>
             </li>
             <li class="<%= current_nav_class(front_question_index_faq_path)%> <%= current_nav_class(front_question_index_uaq_path)%>">
-              <%= link_to "提问留言", front_question_index_faq_path %>
+              <%= link_to t('view.navbar.question'), front_question_index_faq_path %>
             </li>
           </ul>
           <div id="user-action" class="pull-right">
