front后台管理的ie对应初步完成

--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -12,6 +12,19 @@ html, body {
 // -----------------------------------------
 // 顶部国定菜单
 // -----------------------------------------
+#navbar-top.navbar-default {
+  .navbar-toggle {
+    background-color: $car-color-primary;
+    &:hover,
+    &:focus {
+      background-color: $car-color-primary;
+    }
+    .icon-bar {
+      background-color: #fff;
+    }
+  }
+}
+
 #navbar-top {
   border-bottom: 3px solid $car-color-primary;
   .nav.navbar-nav > li > a {
