把预约画面的选择开始日期删除掉

--- a/app/views/back/mystation/order_phones/_order_time_area.html.erb
+++ b/app/views/back/mystation/order_phones/_order_time_area.html.erb
@@ -6,6 +6,7 @@
 
 <div>
   <div class="row">
+    <!--
     <div class="col-sm-2">
       <label class="string optional control-label" for="">选择开始日期</label>
     </div>
@@ -13,8 +14,9 @@
       <input car_date_picker="" class="string optional form-control" id="select_start_date" name="select_start_date"
         placeholder="yyyy-mm-dd" type="text" value="">
     </div>
+    -->
     <!-- 提示图标 -->
-    <div class="col-sm-3 col-sm-offset-4">
+    <div class="col-sm-3 pull-right">
       <%= render "common/order/order_select_time_tips" %>
     </div>
   </div>
