--- a/app/views/front/orders/steps/_form_step_select_date.html.erb
+++ b/app/views/front/orders/steps/_form_step_select_date.html.erb
@@ -5,15 +5,17 @@
 <% end %>
 
 <div class="row">
+  <!-- 
   <div class="col-sm-2">
     <label class="string optional control-label" for="">选择开始日期</label>
   </div>
   <div class="col-sm-3">
     <input car_date_picker="" class="string optional form-control" id="select_start_date" name="select_start_date" placeholder="yyyy-mm-dd" type="text" value="">
   </div>
+  -->
 
   <!-- 提示图标 -->
-  <div class="col-sm-4 col-sm-offset-3">
+  <div class="col-sm-4 pull-right">
     <%= render "common/order/order_select_time_tips" %>
   </div>
 </div>
