--- a/app/assets/stylesheets/front.css.scss
+++ b/app/assets/stylesheets/front.css.scss
@@ -7,6 +7,7 @@
 // @import "adminlte/AdminLTE";
 
 // iCheck关联
+@import "adminlte/iCheck/minimal/minimal";
 @import "adminlte/iCheck/square/green";
 
 // 摇动
