--- a/app/views/layouts/front_user/_header.html.erb
+++ b/app/views/layouts/front_user/_header.html.erb
@@ -11,29 +11,18 @@
       <div class="navbar-right">
         <ul class="nav navbar-nav">
         <!-- Messages: style can be found in dropdown.less-->
-        <li class="dropdown user user-menu">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="glyphicon glyphicon-user"></i>
             <span><%= current_user.show_name%> <i class="caret"></i></span>
           </a>
-          <ul class="dropdown-menu">
-          <!-- User image -->
-          <li class="user-header bg-light-blue">
-            <!-- TODO dairg user头像设置 -->
-            <%= image_tag "adminlte/avatar-male-1.png", class: "img-circle", alt:"User Image" %>
-            <p>
-              <%= current_user.show_name %>
-            </p>
-          </li>
-          <!-- Menu Footer-->
-          <li class="user-footer">
-            <div class="pull-left">
-              <%= link_to t('view.action.personal.show'), front_user_personal_show_path, class: "btn btn-default btn-flat" %>
-            </div>
-            <div class="pull-right">
-              <%= link_to t('view.action.personal.password'), front_user_personal_password_path, class: "btn btn-default btn-flat" %>
-            </div>
-          </li>
+          <ul class="dropdown-menu" role="menu">
+            <li>
+              <%= link_to t('view.action.personal.show'), front_user_personal_show_path%>
+            </li>
+            <li>
+              <%= link_to t('view.action.personal.password'), front_user_personal_password_path%>
+            </li>
           </ul>
         </li>
         <li>
