--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -304,7 +304,7 @@ img.station-pictures {
 }
 
 // -----------------------------------------
-// TODO dairg 介绍
+// 前端front的list画面的list样式
 // -----------------------------------------
 .car-info-list {
   margin-top: 18px;
