--- a/app/assets/stylesheets/back/all.css.scss
+++ b/app/assets/stylesheets/back/all.css.scss
@@ -73,3 +73,12 @@ sup.unit {
 .car-map-wrapper {
   height: 400px;
 }
+
+// -----------------------------------------
+// daterangepicker的表示text框
+// -----------------------------------------
+.car-date-range-input {
+  display: inline;
+  width: 120px;
+  margin: 0px 5px;
+}
