--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,6 @@
-<p>Welcome <%= @email %>!</p>
+<p>欢迎您，<%= @email %>!</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>您可以通过点击以下链接确认您的邮箱：</p>
 
-<p><%= link_to 'Confirm my account', user_confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to '确认我的邮箱', user_confirmation_url(confirmation_token: @token) %></p>
+
