用户界面添加了点击预约检车按钮，删除了欢迎，姓名的内容

--- a/app/assets/stylesheets/front/all.css.scss
+++ b/app/assets/stylesheets/front/all.css.scss
@@ -310,3 +310,10 @@ img.station-pictures {
   margin-top: 18px;
 }
 
+// -----------------------------------------
+// front user界面左上角用户点击预约按钮
+// -----------------------------------------
+.skin-blue .sidebar a.btn {
+  color: #fff;
+}
+
