--- a/app/views/layouts/front_user/_left_side.html.erb
+++ b/app/views/layouts/front_user/_left_side.html.erb
@@ -2,14 +2,7 @@
 <section class="sidebar">
   <!-- Sidebar user panel -->
   <div class="user-panel">
-    <!--
-    <div class="pull-left image">
-      <%= image_tag "adminlte/avatar-male-1.png", class: "img-circle", alt:"User Image" %>
-    </div>
-    -->
-    <div class="pull-left info">
-      <p><%= t('view.label.welcome', {name: current_user.show_name}) %></p>
-    </div>
+    <a class="btn btn-lg btn-success" href="www.baidu.com">点击预约检车</a>
   </div>
   <!-- sidebar menu: : style can be found in sidebar.less -->
   <ul class="sidebar-menu">
