--- a/app/views/front/orders/steps/_form_step_basic_info.html.erb
+++ b/app/views/front/orders/steps/_form_step_basic_info.html.erb
@@ -6,5 +6,5 @@
     <%= f.input :car_number_detail, wrapper: :simple_inline %>
   </div>
 </div>
-<%= f.input :owner_name, required: true %>
+<%= f.input :owner_name, required: true, input_html: {maxlength: 30} %>
 <%= f.input :telephone, required: true, input_html: telephone_mask_hash %>
