--- a/app/views/layouts/front_user/_left_side.html.erb
+++ b/app/views/layouts/front_user/_left_side.html.erb
@@ -2,7 +2,7 @@
 <section class="sidebar">
   <!-- Sidebar user panel -->
   <div class="user-panel">
-    <a class="btn btn-lg btn-success" href="www.baidu.com">点击预约检车</a>
+    <a class="btn btn-lg btn-success" href="<%= front_stations_path %>">点击预约检车</a>
   </div>
   <!-- sidebar menu: : style can be found in sidebar.less -->
   <ul class="sidebar-menu">
