--- a/app/views/front/user/personal/edit.html.erb
+++ b/app/views/front/user/personal/edit.html.erb
@@ -11,13 +11,7 @@
 <div class='box box-info car-content-form'>
   <%= simple_form_for(@user, url: [:front, :user, :personal, :update], html: {class: 'form-horizontal mask-form', role: 'form', method: :patch} ) do |f| %>
     <div class='car-form-items'>
-      <div class="form-group">
-        <label class="col-sm-2 control-label"><%= User.human_attribute_name(:email) %></label>
-        <div class="col-sm-10">
-          <p class="form-control-static"><%= @user.email %></p>
-        </div>
-      </div>
-      <%# f.input :telephone, input_html: telephone_mask_hash %>
+      <%= f.input :email, input_html: {readonly: ""} %>
       <%= f.input :telephone, input_html: {readonly: ""} %>
       <%= f.input :name, placeholder: t('view.placeholder.name') %>
       <%= f.input :sex, as: :radio_buttons %>
