--- a/app/views/front/user/personal/password.html.erb
+++ b/app/views/front/user/personal/password.html.erb
@@ -1,9 +1,9 @@
 <div class='box box-info car-content-form'>
   <%= simple_form_for(@user, url: [:front, :user, :personal, :update_password], html: {class: 'form-horizontal mask-form', role: 'form', method: :patch} ) do |f| %>
     <div class='car-form-items'>
-      <%= f.input :current_password, required: true %>
-      <%= f.input :password, required: true %>
-      <%= f.input :password_confirmation %>
+      <%= f.input :current_password, required: true, input_html: {maxlength: 30} %>
+      <%= f.input :password, required: true, input_html: {maxlength: 30} %>
+      <%= f.input :password_confirmation, input_html: {maxlength: 30} %>
     </div>
     <div class="car-form-actions bg-gray">
       <div class='col-sm-offset-2 col-sm-10 button-wrapper'>
