--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -7,7 +7,18 @@
     <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name),
         html: {class: 'form-horizontal', role: 'form', method: :post} ) do |f| %>
 
-      <%= f.full_error :unlock_token %>
+      <%= f.full_error :unlock_token, class: "car-token-alert" %>
+
+      <div class="well">
+        <ul>
+          <li>如果您填写了邮箱信息，可通过输入Email接收解锁邮件。<br></li>
+          <li>
+            如果您是通过手机注册的用户，可通过 
+            <a href="<%= new_by_telephone_user_session_path%>"><%= t('view.action.sign_in_by_phone')%></a>
+            来解锁。
+          </li>
+        </ul>
+      </div>
 
       <div class='car-form-items'>
         <%= f.input :email, required: true, autofocus: true, input_html: {maxlength: 30} %>
