--- a/app/views/admins/passwords/edit.html.erb
+++ b/app/views/admins/passwords/edit.html.erb
@@ -1,16 +1,28 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div><%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Change my password" %></div>
-<% end %>
-
-<%= render "admins/shared/links" %>
+<div class="form-box" id="login-box">
+  <div class="header"><%= t('view.action.modify_password') %></div>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+    <div class="body bg-gray">
+      <% if devise_error_messages!.present? %>
+      <div class="alert alert-danger">
+        <%= devise_error_messages! %>
+      </div>
+      <% end %>
+      <%= f.hidden_field :reset_password_token %>
+      <div>
+        <%= f.label :password, t('view.label.new_password') %><br />
+        <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control" %>
+      </div>
+      <br>
+      <div>
+        <%= f.label :password_confirmation%><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+      </div>
+      <br>
+    </div>
+    <div class="footer">                                                               
+      <button type="submit" class="btn bg-olive btn-block"><%= t('view.action.modify_password') %></button>  
+      <p>
+        <%= render "admins/shared/links" %>
+      </p>
+    </div>
+  <% end %>
