--- a/app/views/admins/mailer/confirmation_instructions.html.erb
+++ b/app/views/admins/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,11 @@
-<p>Welcome <%= @email %>!</p>
+<p>亲爱的 <%= @email %>:</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>欢迎加入车辆年检服务网!</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>请点击下面的链接确认您的账号：</p>
+
+<p><%= link_to '确认我的账号', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>--车辆年检服务网</p>
+
+<p>(这是一封自动产生的email，请勿回复。)</p>
