--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -1,6 +1,11 @@
-<p>欢迎您，<%= @email %>!</p>
+<p>亲爱的 <%= @email %>:</p>
 
-<p>您可以通过点击以下链接确认您的邮箱：</p>
+<p>欢迎加入车辆年检服务网!</p>
+
+<p>请点击下面的链接确认您的账号：</p>
 
 <p><%= link_to '确认我的邮箱', user_confirmation_url(confirmation_token: @token) %></p>
 
+<p>--车辆年检服务网</p>
+
+<p>(这是一封自动产生的email，请勿回复。)</p>
