--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>亲爱的 <%= @resource.email %>:</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>有人请求通过邮件修改您的密码，您可以通过点击以下链接修改密码：</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to '修改密码', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>如果不是您本人请求修改密码，请您忽略这封邮件。</p>
+<p>除非您点击了上面的链接并且成功修改了密码，否则您的密码不会被修改。</p>
