--- a/app/views/users/mailer/unlock_instructions.html.erb
+++ b/app/views/users/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>亲爱的 <%= @resource.email %>:</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>由于您登录错误的次数太多，您的账户已经被锁定。</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>您可以通过点击以下链接进行解锁：</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to '解锁账户', unlock_url(@resource, unlock_token: @token) %></p>
