--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -11,12 +11,13 @@
 
       <div class="well">
         <ul>
-          <li>如果您填写了邮箱信息，可通过输入Email接收解锁邮件。<br></li>
+          <li>如果您填写了邮箱信息，可通过输入Email接收解锁邮件。</li>
           <li>
             如果您是通过手机注册的用户，可通过 
             <a href="<%= new_by_telephone_user_session_path%>"><%= t('view.action.sign_in_by_phone')%></a>
             来解锁。
           </li>
+          <li>账户被锁定后，3个小时后会自动解锁。</li>
         </ul>
       </div>
 
